# Robonaldo

./: .gitignore  README.md  install.sh
arduino/arduino_motorcontrol/: arduino_motorcontrol.ino
gazebo/: CMakeLists.txt  robonaldo.world  robonaldo_plugin.cpp  vel.cc
gazebo/models/robonaldo/: model.sdf
gazebo/robonaldo_plugin/: CMakeLists.txt  robonaldo_plugin.cpp
orangeball/: main.py
src/image_processing/: CMakeLists.txt  package.xml
src/image_processing/src/: depth_sensing.py  image_pub.py  vision_processing.py
src/robonaldo/: CMakeLists.txt  package.xml
src/robonaldo/launch/: desktop.launch  desktop_full.launch  full.launch  hardware.launch  jetson.launch
src/robonaldo/msg/: ball_positions.msg  encoder.msg  encoder_data.msg  imu_values.msg  odometry.msg
src/robonaldo/src/: decider.cpp  desktop.cpp  movebitch.cpp  odometry.cpp  vision.cpp
src/robonaldo_control/: CMakeLists.txt  package.xml
src/robonaldo_control/launch/: desktop.launch  desktop_full.launch  full.launch  jetson.launch
src/robonaldo_control/src/: camera.cpp  decider.cpp  desktop.cpp
src/robonaldo_gazebo/: CMakeLists.txt  package.xml  robonaldo.world
src/robonaldo_gazebo/launch/: robonaldo_gazebo.launch
src/robonaldo_gazebo/src/: robonaldo_imu_plugin.cpp  robonaldo_plugin.cpp  robonaldo_world_plugin.cpp
src/robonaldo_hardware/: CMakeLists.txt  package.xml
src/robonaldo_hardware/lib/: MadgwickAHRS.cpp  MadgwickAHRS.h
src/robonaldo_hardware/src/: fused_orientation.cpp  (+1 more)
src/robonaldo_msgs/: CMakeLists.txt  package.xml
src/robonaldo_vision/: CMakeLists.txt  package.xml
(+16 files in other folders)
